--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "clsx": "^2.1.1",
+    "cookie": "^1.1.1",
+    "dotenv": "^17.2.3",
+    "framer-motion": "^12.27.1",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "prisma": "^5.10.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
